external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/ellipsis_expansion.ide.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:2:3
  │
1 │ #[allow(ide_path_autocomplete)]
  │   ----- Attribute previously given here
2 │ #[allow(ide_dot_autocomplete)]
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:18:15
   │
18 │         let A(.., _q) = a;
   │               ^^ Ellipsis expansion: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:19:19
   │
19 │         let A(_q, ..) = a;
   │                   ^^ Ellipsis expansion: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:20:15
   │
20 │         let A(..) = a;
   │               ^^ Ellipsis expansion: _, _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:22:24
   │
22 │         let B { q: _q, .. } = b;
   │                        ^^ Ellipsis expansion: a: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:23:24
   │
23 │         let B { a: _a, .. } = b;
   │                        ^^ Ellipsis expansion: q: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:24:17
   │
24 │         let B { .. } = b;
   │                 ^^ Ellipsis expansion: a: _, q: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:27:22
   │
27 │             C::X(_q, ..) => (),
   │                      ^^ Ellipsis expansion: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:28:18
   │
28 │             C::X(.., _z) => (),
   │                  ^^ Ellipsis expansion: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:29:18
   │
29 │             C::X(..) => (),
   │                  ^^ Ellipsis expansion: _, _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:31:27
   │
31 │             C::Y { y: _y, .. } => (),
   │                           ^^ Ellipsis expansion: z: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:32:20
   │
32 │             C::Y { .., y: _y } => (),
   │                    ^^ Ellipsis expansion: z: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:33:20
   │
33 │             C::Y { .., z: _z } => (),
   │                    ^^ Ellipsis expansion: y: _

note[I15005]: IDE ellipsis expansion
   ┌─ tests/move_2024/ide_mode/ellipsis_expansion.move:34:20
   │
34 │             C::Y { .. } => ()
   │                    ^^ Ellipsis expansion: y: _, z: _

